--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TypeScript Tutorial</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
@@ -41,6 +41,6 @@
       <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
     </footer>
 
-    <script src="app.js" type="module"></script>
+    <script src="./app.js" type="module"></script>
   </body>
 </html>
